# bloginator

./: .env.example  .env.sample  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  Agents.md  Agents.md.original  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ENGINEERING_EXCELLENCE_PASS5_SUMMARY.md  FINAL_ASSESSMENT.md  GRADE_ASSESSMENT.md  PASS5_STATUS_REPORT.md  PLAN_SKIP_TRACKING_UX.md  PRODUCT_REVIEW.md  PROJECT_PLAN.md  README.md  RETROSPECTIVE_2025-12-03.md  SECURITY.md  SESSION_HANDOFF.md  TEST_BUGS_REVEALED.md  TEST_PLAN.md  VALIDATION_WARNINGS.md  VERBOSE_LOGGING_PLAN.md  auto_respond.py  blog1-daily-standup.md  blog1-standup-outline.json  corpus.yaml.example  coverage.json  docker-compose.yml  generate_3_blogs.sh  generate_remaining_blogs.sh  outline.json  principal_sde_job_description.md  pyproject.toml  run-e2e.sh  (+5 more)
.ai-guidance/: autonomous-generation.md  batch-generation.md  commands.md  corpus-rules.md  llm-backend.md  quality-gates.md  repo-structure.md  troubleshooting.md
.ai-guidance/autonomous-generation/: batch-topics.md  index.md  pipeline.md  synthesis.md  voice-matching.md
.ai-guidance/batch-generation/: index.md  mistakes.md  procedure.md
.ai-guidance/commands/: cli.md  debugging.md  git.md  index.md  linting.md  setup.md  testing.md
.ai-guidance/corpus-rules/: correct-approach.md  index.md  never-bypass.md
.ai-guidance/llm-backend/: critical.md  index.md  modes.md
.ai-guidance/quality-gates/: checks.md  ci-requirements.md  index.md  style-guide.md
.ai-guidance/repo-structure/: cleanliness.md  directories.md  index.md
.ai-guidance/troubleshooting/: common-issues.md  efficiency.md  index.md  terminal-issues.md
.claude/: README.md  STYLE_GUIDE.md  coding-standards.md  common-tasks.md  project-context.md  settings.local.json
.github/: dependabot.yml
.github/instructions/: ai-agent-guidelines.md
.github/workflows/: lint.yml  security.yml  tests.yml
archive/: ENGINEERING_EXCELLENCE_REVIEW.md  GENESIS_REVIEW_PASS1.md  PASS2_IMPROVEMENTS.md  PASS2_STATUS_REPORT.md  PASS5_STATUS_REPORT.md  README.md
corpus/: README.md  blog-topics.yaml  corpus.sample.yaml  corpus.yaml  corpus.yaml.example  sample.yaml
docs/: ACTION_PLAN.md  AGENTS.md  ARCHITECTURE-002-Deployment-Modes.md  ASSESSMENT_VECTORIZATION_AND_PROMPTS.md  BATCH_MODE_IMPLEMENTATION_PLAN.md  CHANGELOG.md  CLAUDE.md  CLAUDE_API_GUIDE.md  CLAUDE_GUIDELINES.md  CORPUS_DIRECTORY_DESIGN.md  CORPUS_DIRECTORY_REQUIREMENTS.md  CORPUS_DIRECTORY_TEST_PLAN.md  CORPUS_UPLOAD_DESIGN.md  CORPUS_UPLOAD_REQUIREMENTS.md  CORPUS_UPLOAD_TEST_PLAN.md  CUSTOM_LLM_GUIDE.md  DEEP_CLEAN_IMPLEMENTATION_PLAN.md  DEPLOYMENT.md  DESIGN-SPEC-001-Implementation-Plan.md  DEVELOPER_GUIDE.md  DISABLED_TESTS_ANALYSIS.md  FULL_OPTIMIZATION_RUN_PLAN.md  FUTURE_WORK.md  GO_STYLE_GUIDE.md  HANDOFF_TASK11.md  HOW_TO_ASK_FOR_SAMPLES.md  IMPLEMENTATION_PLAN_TOPIC_DRIFT_FIX.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_2025.md  INSTALLATION.md  MIGRATION-GUIDE.md  MONITORING.md  OLLAMA_FALLBACK.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_LEARNINGS.md  PARALLEL_VALIDATION_COVERAGE_PLAN.md  PHASE1_CODE_AUDIT_FINDINGS.md  PHASE1_CODE_CLEANUP_SUMMARY.md  PHASE2_TEST_CLEANUP_EXECUTION_PLAN.md  PHASE2_TEST_SUITE_AUDIT_FINDINGS.md  (+26 more)
docs/examples/: change_management_template.md  senior_sde_job_description.md  software_engineer_career_ladder.md  staff_sde_job_description.md  teams-channel-naming.md
docs/plans/: 2025-12-03-refactor-large-files.md
examples/: README.md
examples/corpus/: code-review-best-practices.md  constructive-feedback-sbi-model.md  engineering-leadership.md  incident-response.md  mechanisms-building-self-correcting-systems.md  what-dashboards-are-good-for.md
prompt_optimization_50rounds/: convergence_analysis.json  optimization_summary.json  result_test_001.json  result_test_002.json  round_test_001_r001.json  round_test_001_r002.json  round_test_001_r003.json  round_test_001_r004.json  round_test_001_r005.json  round_test_001_r006.json  round_test_001_r007.json  round_test_001_r008.json  round_test_001_r009.json  round_test_001_r010.json  round_test_001_r011.json  round_test_001_r012.json  round_test_001_r013.json  round_test_001_r014.json  round_test_001_r015.json  round_test_001_r016.json  round_test_001_r017.json  round_test_001_r018.json  round_test_001_r019.json  round_test_001_r020.json  round_test_001_r021.json  round_test_001_r022.json  round_test_001_r023.json  round_test_001_r024.json  round_test_001_r025.json  round_test_001_r026.json  round_test_001_r027.json  round_test_001_r028.json  round_test_001_r029.json  round_test_001_r030.json  round_test_001_r031.json  round_test_001_r032.json  round_test_001_r033.json  round_test_001_r034.json  round_test_001_r035.json  round_test_001_r036.json  (+65 more)
prompts/: PHASE3_IMPLEMENTATION_CONTEXT.md  README.md  corpus-synthesis-llm.md  finish-refactoring-options-b-c.md  generate-remaining-blogs.md
prompts/common/: brevity-rules.yaml
prompts/draft/: base.yaml
prompts/optimization/: meta_prompt.yaml  test_cases.yaml
prompts/outline/: base.yaml  topic-validation.yaml
prompts/refinement/: base.yaml
prompts/review/: base.yaml  structural-analysis.yaml
scripts/: README.md  STYLE_GUIDE.md  analyze_optimization.py  auto_respond.py  check-root-cleanliness.sh  corpus-and-outputs-cleanup.sh  e2e-lib.sh  fast-quality-gate.sh  generate-all-blogs.py  generate-batch-blogs.sh  generate-blog.sh  generate_blog_improved.sh  purge-corpus-and-outputs.sh  respond-to-llm-requests-with-llm.py  respond-to-llm-requests.py  run-e2e.sh  run-fast-quality-gate.sh  run-streamlit.sh  setup-macos.sh  validate-cross-references.sh  validate-monorepo.sh
scripts/lib/: common.sh  compact.sh  e2e-lib.sh
src/bloginator/: __init__.py  _config_manager.py  _corpus_settings.py  config.py  corpus_config.py  timeout_config.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_version.py
tests/benchmarks/: README.md  __init__.py  test_performance.py
tests/e2e/: README.md  __init__.py  test_cli_workflows.py  test_full_workflow.sh  (+4 more)
(+280 files in other folders)
